--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,27 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+permalink: ':title/'
+baseurl: "/orange-point" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+site-twitter: #if your site has a twitter account, enter it here
+
+# Author Settings
+author: pinktaffy # add your name
+author-img: profile.jpg # add your photo
+about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+# social-twitter: # add your Twitter handle
+# social-facebook: # add your Facebook handle
+social-github: pinktaffy # add your Github handle
+# social-linkedin: # add your Linkedin handle
+social-email: clockorangebeer@gmail.com
+
+# Disqus
+# discus-identifier: mr-brown # add your discus identifier
+
+# Tracker
+# analytics: # Google Analytics
+# twitter_username: jekyllrb
 github_username:  pinktaffy
 
 # Build settings
