--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: punky
 description: >- # this means to ignore newlines until "baseurl:"
   orange-point
 permalink: ':title/'
-baseurl: "/orange-point" # the subpath of your site, e.g. /blog
+baseurl: "/orange-point/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
