--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,8 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: pinktaffy # add your name
 author-img: profile.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+og_image: profile.jpg
+about-author: “ I talk to the wind, The wind cannot hear. " # add description
 # social-twitter: # add your Twitter handle
 # social-facebook: # add your Facebook handle
 social-github: pinktaffy # add your Github handle
@@ -51,6 +52,7 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-paginate
+  - jekyll-seo-tag
   - jemoji
 
 paginate: 8
