--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
+encoding: UTF-8
 title: punky
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
