--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: pinktaffy # add your name
 author-img: profile.jpg # add your photo
-og_image: profile.jpg
+og_image: https://github.com/pinktaffy/pinktaffy.github.io/blob/main/assets/img/profile.jpg #profile.jpg
 about-author: " I talk to the wind, The wind cannot hear. 凌晨开车越过山道, 透过前窗玻璃, 看到外面悬着薄薄一层雾气. 这时我就会想起王小波说过的: 冷牛般的雾, 这个比喻. 所有动的, 不动的都被困在冷冰冰的白色里." # add description
 # social-twitter: # add your Twitter handle
 # social-facebook: # add your Facebook handle
